--- a/Cabbages.rmd
+++ b/Cabbages.rmd
@@ -1,7 +1,7 @@
 ---
 title: "Cabbages"
-author: "Put your name here!"
-date: "put the date here"
+author: "Michelle Cervantes"
+date: "September 22nd 2020"
 output:
   html_document:
     df_print: paged
@@ -35,14 +35,33 @@ veggy <- cabbages
 
 <!--Graphical results here.  Make sure to show your code.  Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too.  Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+### Plot boxplots
+
+```{r}
+plot(VitC~Cult,data=veggy)
+```
+
+
 ### Numerical Descriptive Results
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
+
+# Numerical results
+
+```{r}
+favstats(VitC~Cult,data=veggy)
+```
+
 
 ## Inferential Results
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
+# Inferential  
+  
+```{r}
+t.test(VitC~Cult,data=veggy)
+```
 
 # Discussion and Conclusion
 
